Revert "fix: attempt to fix animations on mobile"
This reverts commit 92ddfb0e70e57d04c3ec02e7c6d6bb70391c0a55.

--- a/web/src/components/Page.scss
+++ b/web/src/components/Page.scss
@@ -1,4 +1,39 @@
 /**************************/
+/* CSS Animations Classes */
+/**************************/
+
+.fade-enter {
+    #pageMain {
+        opacity: 0;
+        z-index: 1;
+        transform: translate(0, 25px);
+    }
+}
+
+.fade-enter.fade-enter-active {
+    #pageMain {
+        opacity: 1;
+        transition: opacity 300ms ease-out, transform 300ms ease;
+        transform: translate(0, 0);
+    }
+}
+
+.fade-exit {
+    #pageMain {
+        opacity: 1;
+        transform: translate(0, 0);
+    }
+}
+
+.fade-exit.fade-exit-active {
+    #pageMain {
+        opacity: 0;
+        transition: opacity 300ms ease-out, transform 300ms ease;
+        transform: translate(0, 30px);
+    }
+}
+
+/**************************/
 /* Page Layout            */
 /**************************/
 
